# serde-rusoto-dynamodb

./: Cargo.toml  LICENSE.md  README.md
src/: de.rs  lib.rs  result.rs  ser.rs
tests/: tests.rs
