[package]
name = "serde_rusoto_dynamodb"
version = "0.1.0"
authors = ["kolektiv <andrew@xyncro.com>"]
edition = "2018"

[dependencies]
bytes = "0.4.12"
derive-new = "0.5.6"
itoa = "0.4.4"
maplit = "1.0.1"
rusoto_dynamodb = "0.39.0"
ryu = "0.2.8"
serde = { version = "1.0.91", features = ["derive"] }
